src/parser/snapshots/monkey_language_server__parser__test__hash_happy_1.snap
---
source: src/parser/test.rs
description: "{}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Ok(
            [],
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 2,
            },
        },
    },
]

===================================

{}
