src/parser/snapshots/monkey_language_server__parser__test__hash_happy_2_errors.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\"}"
expression: "parser_errors(r#\"{\"foo\": \"bar\"}\"#, errors)"
---
{"foo": "bar"}
