src/parser/snapshots/monkey_language_server__parser__test__hash_happy_3_errors.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\", \"eggs\": \"spam\"}"
expression: "parser_errors(r#\"{\"foo\": \"bar\", \"eggs\": \"spam\"}\"#, errors)"
---
{"foo": "bar", "eggs": "spam"}
