src/parser/snapshots/monkey_language_server__parser__test__hash_happy_4_errors.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}"
expression: "parser_errors(r#\"{true: \"bar\", 2: \"baz\"}\"#, errors)"
---
{true: "bar", 2: "baz"}
