src/parser/snapshots/monkey_language_server__parser__test__hash_index_happy_1_errors.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\"}[\"foo\"]"
expression: "parser_errors(r#\"{\"foo\": \"bar\"}[\"foo\"]\"#, errors)"
---
{"foo": "bar"}["foo"]
