src/parser/snapshots/monkey_language_server__parser__test__hash_index_happy_2_errors.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}[true]"
expression: "parser_errors(r#\"{true: \"bar\", 2: \"baz\"}[true]\"#, errors)"
---
{true: "bar", 2: "baz"}[true]
