src/parser/snapshots/monkey_language_server__parser__test__hash_index_happy_3_errors.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}[1+1]"
expression: "parser_errors(r#\"{true: \"bar\", 2: \"baz\"}[1+1]\"#, errors)"
---
{true: "bar", 2: "baz"}[1+1]
